--- a/css/styles.css
+++ b/css/styles.css
@@ -301,29 +301,25 @@ body {
     margin-left: 10px;
 }
 
-.section-team .social-item {
+.section-team .social-link {
+    display: inline-flex;
     color: var(--icon-color);
+    width: 44px;
+    height: 44px;
+    align-items: center;
+    justify-content: center;
     background-color: var(--primery-bg-color);
     border-radius: 50%;
 }
 
-.section-team .social-item:hover,
-.section-team .social-item:focus {
+.section-team .social-link:hover,
+.section-team .social-link:focus {
     color: var(--hero-text-color);
     background-color: var(--accent-text-color);
 }
 
-.social-icon {
-    width: 44px;
-    height: 44px;
-    fill: currentColor;
-}
-
 .section-team .social-icon {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-left: 12px;
-    padding-right: 12px;
+    fill: currentColor;
 }
 
 .section-clients .item-icon {
