--- a/css/styles.css
+++ b/css/styles.css
@@ -341,6 +341,7 @@ body {
 
 
 .section-clients .item {
+    display: inline-flex;
     flex-basis: calc((100% - 150px) / 6);
     margin-right: 30px;
     color: var(--icon-color);
@@ -415,6 +416,10 @@ body {
 .footer .social-icon:hover,
 .footer .social-icon:focus {
     fill:#2196F3;
+}
+
+.footer .social-item {
+    display: inline-flex;
 }
 
 .hero .button {
