--- a/css/styles.css
+++ b/css/styles.css
@@ -54,12 +54,7 @@ body {
 .accent-logo {
     color: var(--accent-text-color);
 }
-.footer .logo {
-    color: var(--hero-text-color); 
 
-    display: block;
-    margin-bottom: 20px;
-}
 
 .logo,
 .accent-logo {
@@ -70,8 +65,7 @@ body {
     text-decoration-line: none;
 }
 
-.site-nav .link
-{
+.site-nav .link {
     color: var(--title-text-color);
     text-decoration-line: none;
     
@@ -94,19 +88,20 @@ body {
 
 .contacts {
     margin-left: auto;
-    align-items: baseline;
 }
 
 .contacts .link {
     color: var(--primery-text-color);
     text-decoration-line: none;
 
+    display: flex;
+    align-items: center;
     padding-top: 32px;
     padding-bottom: 32px;
 }
 
 .contacts .item + .item {
-    margin-left: 50px;
+    margin-left: 30px;
 }
 
 .site-nav,
@@ -127,14 +122,7 @@ body {
     color: var(--accent-text-color);
 }
 
-.footer .link:hover,
-.footer .link:focus,
-.footer .map:hover,
-.footer .map:focus {
-    color: var(--accent-text-color);
-}
-
-.head .container {
+.head .container {    
     display: flex;
     align-items: center;
 }
@@ -162,8 +150,7 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    outline: 2px tomato dashed ;
-}
+    }
 
 .hero-title {
     font-weight: 900;
@@ -235,21 +222,19 @@ body {
     margin-right: 0;
 }
 
-.section-work .item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.section-features .item-icon {
-    display: block;
+.section-features .box {
+    display: flex;
     width: 270px;
     height: 120px;
-    padding-top: 25px;
-    padding-bottom: 25px;
-    padding-left: 100px;
-    padding-right: 100px;
+    justify-content: center;
+    align-items: center;
     background-color: var(--team-bg-color);
     border-radius: 4px;
     margin-bottom: 30px;
+}
+
+.section-work .item:not(:last-child) {
+    margin-right: 30px;
 }
 
 .section-team .title {
@@ -273,7 +258,6 @@ body {
 }
 
 .section-team .item {
-    margin-bottom: 30px;
     display: block;
     max-width: 100%;
     height: auto;
@@ -284,17 +268,21 @@ body {
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     width: 270px;
-    padding-bottom: 30px;
 }
 
 .section-team .card:not(:last-child) {
     margin-right: 30px;
 }
 
+.section-team .card-text {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
 .section-team .social {
     margin-top: 16px;
-    padding-left: 32px;
-    padding-right: 30px;
 }
 
 .social-item + .social-item {
@@ -322,29 +310,32 @@ body {
     fill: currentColor;
 }
 
-.section-clients .item-icon {
+.section-clients .link-clients {
+    color: var(--icon-color);
+    
+    display: flex;
     width: 170px;
     height: 92px;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    padding-left: 32px;
-    padding-right: 32px;
     border: 1px solid;
     border-radius: 4px;
+    justify-content: center;
+    align-items: center;
+}
+
+.section-clients .icon-clients {
     fill: currentColor;
 }
 
-.section-clients .item:hover,
-.section-clients .item:focus {
+.section-clients .link-clients:hover,
+.section-clients .link-clients:focus {
     color: var(--accent-text-color);
 }
 
 
 .section-clients .item {
-    display: inline-flex;
+    display: flex;
     flex-basis: calc((100% - 150px) / 6);
     margin-right: 30px;
-    color: var(--icon-color);
 }
 
 .section-clients .item:last-child {
@@ -366,18 +357,70 @@ body {
     line-height: 1.88;
 }
 
-.footer .address {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+.section-projects .item+.item {
+    margin-left: 8px;
+}
+
+.section-projects .flex-container {
+    row-gap: 30px;
+    column-gap: 30px;
+}
+
+.section-projects .flex-words {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border-left: 1px solid #EEEEEE;
+    border-right: 1px solid #EEEEEE;
+    border-bottom: 1px solid #EEEEEE;
+}
+
+.section-projects .pic,
+.section-work .pic {
     display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+.section-projects .flex-item {
+    background: var(--primery-bg-color);
+    width: calc((100% - 60px) / 3);
+}
+
+.section-projects .card-link {
+    text-decoration: none;
+    color: inherit;
+    display: block;
+}
+
+.section-projects .card-link:hover,
+.section-projects .card-link:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .footer {
     background-color: var(--hero-bg-color);
     padding-top: 60px;
     padding-bottom: 60px;
+}
+
+.footer .address {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    
+    display: block;
+    min-width: 231px;
+    padding-right: auto;
+}
+
+.footer .logo {
+    color: var(--hero-text-color);
+
+    display: block;
+    margin-bottom: 20px;
 }
 
 .footer .link {
@@ -390,6 +433,13 @@ body {
     text-decoration-line: none;
 }
 
+.footer .link:hover,
+.footer .link:focus,
+.footer .map:hover,
+.footer .map:focus {
+    color: var(--accent-text-color);
+}
+
 .footer .item:not(:last-child) {
     margin-bottom: 9px;
 }
@@ -399,27 +449,26 @@ body {
     margin-bottom: 20px;
 }
 
-.footer .marg + .marg {
-    margin-left: 70px;
-    padding-top: 12px;
+.footer .list {
+    align-items: baseline;
 }
 
-.footer .address {
-    min-width: 231px;
-    padding-right: auto;
+.footer .flex-item + .flex-item {
+    margin-left: 70px;
 }
 
 .footer .social-icon {
-    fill: rgba(255, 255, 255, 0.1);
+    fill: currentColor;
 }
 
-.footer .social-icon:hover,
-.footer .social-icon:focus {
-    fill:#2196F3;
+.footer .social-link:hover,
+.footer .social-link:focus {
+    color: var(--accent-text-color);
 }
 
-.footer .social-item {
-    display: inline-flex;
+.footer .social-link {
+    display: flex;
+    color: rgba(255, 255, 255, 0.1);
 }
 
 .hero .button {
@@ -479,53 +528,6 @@ body {
 .section-projects .buttons {
     margin-bottom: 50px;
     justify-content: center;
-}
-
-.section-projects .item + .item {
-    margin-left: 8px;
-}
-
-
-.flex-container {
-    row-gap: 30px;
-    column-gap: 30px;
-}
-
-.flex-words {
-    padding-left: 24px;
-    padding-right: 24px;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    border-left: 1px solid #EEEEEE;
-    border-right: 1px solid #EEEEEE;
-    border-bottom: 1px solid #EEEEEE;
-}
-
-.pic {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
-
-.flex-item {
-    background: var(--primery-bg-color);
-    width: calc((100% - 60px) / 3);
-    /* width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px; */
-}
-
-/* .flex-item:nth-child(3n) {
-    margin-right: 0;
-} 
-
-.flex-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-} */
-
-.flex-item:hover,
-.flex-item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .visually-hidden {
